Changelog for App-Magpie

{{$NEXT}}
 - logger: log correctly when error in external command 
 - recent: using MetaCPAN::Client (::API is deprecated, gh#2)

2.005     2014-02-25 13:58:34+01:00 Europe/Paris
 - forcing directory removal with Path::Tiny

2.004     2014-02-25 13:43:37+01:00 Europe/Paris
 - old: set "confused" renamed to "nodiff"
 - logger: get rid of Log::Dispatchouli, using colors

2.003     2014-02-24 15:53:07+01:00 Europe/Paris
 - old: new set "null" if one of the old/new version is 0
 - old: new set "confused" when cpan reports a difference although there isn't
 - old: update modules.skip
 - fix: auto-converting SPEC to use Makefile.PL or Build.PL if needed
 - fix: adding Module::Build::Tiny compatibility
 - migrated from Path::Class to Path::Tiny

2.002     2013-06-10 13:47:21 Europe/Paris
 - dwim: allow dwimery to continue when package should be updated again

2.001     2013-06-03 13:55:57 Europe/Paris
 - old: using cpan instead of cpanp
 - old: only list a pkgs once, even if multiple modules are old

2.000     2012-10-19 15:53:22 Europe/Paris
 - migrated to @dzpa:jquelin
 - new command: sort
 - dwim: migrating to parallel::forkmanager for more flexibility
 - dwim: do not try to update a package more than once

**

1.122770  2012-10-03 14:49:29 Europe/Paris
 - new command: recent
 - checkout: abort if neither a module name nor a pkg name
 - old: update modules.skip

1.122721  2012-09-28 15:31:22 Europe/Paris
 - old: ignore package before reporting them elsewhere
 - old: try to guess when cpanplus messes output for unparsable modules
 - old: update modules.skip & packages.skip

1.122720  2012-09-28 14:14:19 Europe/Paris
 - old: update modules.skip & packages.skip

1.122700  2012-09-26 14:08:10 Europe/Paris
 - checkout: possibility to pass in a module name instead of pkg name
 - old: update packages.skip

1.122610  2012-09-17 15:54:41 Europe/Paris
 - update: change tarball suffix if needed
 - old: update packages.skip
