@@ -2,6 +2,7 @@ Changelog for App-Magpie
 
 {{$NEXT}}
  - logger: log correctly when error in external command 
+ - update: trying to run './refresh' if existing & no new version
  - recent: using MetaCPAN::Client (::API is deprecated, gh#2)
 
 2.005     2014-02-25 13:58:34+01:00 Europe/Paris
